<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_verse"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:paddingVertical="30dp"
        android:onClick="clickAddVerse"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/learn"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:paddingVertical="30dp"
        android:onClick="clickLearn" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/review"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:paddingVertical="30dp"
        android:onClick="clickReview" />

</LinearLayout>
